--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,21 +39,6 @@ h4 {
   margin: 5px 0;
 }
 
-button {
-  background-color: #ff7b25;
-  color: #fff;
-  padding: 8px 16px;
-  height: 40px;
-  width: 100px;
-  border: none;
-  border-radius: 50px;
-  font-size: 20px;
-  margin: 10px;
-  cursor: pointer;
-  transition: background-color 0.10s, color 0.30s;
-}
-
-
 /* Project Section Styles */
 .project-section {
   display: flex;
@@ -91,10 +76,14 @@ button {
 
 /* Footer Styles */
 footer {
-  background-color: #878f99;
-  color: #fff;
+  display: flex;
+  flex-direction: column; /* For smaller screens */
+  justify-content: space-between;
+  align-items: center;
+  background: var(--primary-color);
+  color: white;
   padding: 10px;
-  text-align: center;
+  margin-top: 20px;
 }
 
 .copyright,
@@ -116,12 +105,36 @@ footer {
     text-align: left;
   }
 
-  footer {
-    display: flex;
-    justify-content: space-between;
-  }
-
   .project-box {
     width: calc(33.33% - 20px);
   }
+
+  footer {
+    flex-direction: row; /* For larger screens */
+  }
+}
+
+/* Button Styles */
+:root {
+  --primary-color: #3498db; /* Define a variable for the primary color */
+}
+
+button {
+  background-color: #ff7b25;
+  color: #fff;
+  padding: 8px 16px;
+  height: 40px;
+  width: 100px;
+  border: none;
+  border-radius: 50px;
+  font-size: 20px;
+  margin: 10px;
+  cursor: pointer;
+  transition: background-color 0.10s, color 0.30s;
+}
+
+.login-btn,
+button {
+  /* ... other styles ... */
+  border-radius: 5px; /* Keep it consistent */
 }
