--- a/style.css
+++ b/style.css
@@ -33,11 +33,11 @@ body {
   flex: 1;
 }
 
-.nav-list {
+.nav-tab {
   display: flex;
   list-style: none;
-  margin: 0;
-  padding: 0;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .nav-item {
