--- a/style.css
+++ b/style.css
@@ -95,6 +95,8 @@ body {
 .container {
   width: 100%;
   margin: 10px;
+  flex-wrap: wrap;
+  justify-content: center;
   border: 1px solid black;
   transition: background-color 0.3s;
 }
