--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
 }
 
 .login-button, .button {
-  color: white;
+  color: green;
   background-color: transparent;
   border: 1px solid white;
   padding: 10px;
@@ -126,6 +126,7 @@ body {
   justify-content: center;
   gap: 10px;
   padding: 10px;
+  button-radius: 50px
 }
 
 /* Tablet Styles */
