--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
 
 .nav-link:hover {
   background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 50px;
 }
 
 .login {
@@ -66,11 +67,20 @@ body {
   font-size: 30px;
   margin-right: 10px;
 }
-
-.login-button, .button {
-  color: green;
-  background-color: transparent;
+.login-button
+  color: white;
+  background-color: green;
   border: 1px solid white;
+  button-radius: 50px
+  padding: 10px;
+  cursor: pointer;
+}
+
+.button {
+  color: white;
+  background-color: blue;
+  border: 1px solid white;
+  button-radius: 50px
   padding: 10px;
   cursor: pointer;
 }
