--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
 
 .nav-item {
   margin: 0 10px;
+  padding: 8px 16px;
 }
 
 .nav-link {
@@ -69,19 +70,17 @@ body {
 }
 .login-button
   color: white;
-  background-color: green;
   border: 1px solid white;
   button-radius: 50px
-  padding: 10px;
+  padding: 8px 16px;
   cursor: pointer;
 }
 
 .button {
   color: white;
-  background-color: blue;
   border: 1px solid white;
   button-radius: 50px
-  padding: 10px;
+  padding: 8px 16px;
   cursor: pointer;
 }
 
@@ -136,7 +135,7 @@ body {
   display: flex;
   justify-content: center;
   gap: 10px;
-  padding: 10px;
+  padding: 8px 16px;
   button-radius: 50px
 }
 
