--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .logo-image {
-  width: 100px;
+  width: 75px;
   height: auto;
 }
 
@@ -126,19 +126,19 @@ body {
   position: relative;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 200px;
+  height: auto;
   border-radius: 16px;
 }
 
 .description {
-  padding: 10px;
+  padding: 8px;
 }
 
 .buttons {
   display: flex;
   justify-content: center;
-  gap: 10px;
+  gap: 32px;
   padding: 8px 16px;
   button-radius: 50px
 }
