--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ body {
   width: 100%;
   margin: 10px;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   border: 1px solid black;
   border-radius: 8px;
