--- a/style.css
+++ b/style.css
@@ -120,6 +120,11 @@ body {
 .title {
   font-weight: bold;
   text-align: center;
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 8px 4px;
+  margin: 8px;
+  
 }
 
 .image, .profile {
