--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ body {
   
 }
 
-.image, .profile {
+.profile {
   object-fit: cover
   position: relative;
   top: 0;
@@ -137,6 +137,15 @@ body {
   border-radius: 16px;
 }
 
+.image, .profile {
+  object-fit: cover
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 150px;
+  height: auto;
+  border-radius: 16px;
+}
 .description {
   padding: 8px;
 }
