--- a/style.css
+++ b/style.css
@@ -50,12 +50,13 @@ body {
   display: block;
   color: white;
   text-decoration: none;
-  padding: 10px;
+  padding: 8px 16px;
 }
 
 .nav-link:hover {
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 50px;
+  padding: 8px 16px;
 }
 
 .login {
@@ -81,10 +82,14 @@ body {
   button-radius: 50px
   padding: 8px 16px;
   cursor: pointer;
+  max-height: 40px;
+  width: auto;
 }
 
 .login-button:hover, .button:hover {
   background-color: rgba(255, 255, 255, 0.2);
+   border-radius: 50px;
+  padding: 8px 16px;
 }
 
 #main {
