--- a/style.css
+++ b/style.css
@@ -125,10 +125,8 @@ body {
 .title {
   font-weight: bold;
   text-align: center;
-  border: 1px solid black;
-  border-radius: 4px;
-  padding: 8px 4px;
-  margin: 8px;
+  padding: 16px
+  margin: 16px;
   
 }
 
