--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 .login-button
   color: white;
   border: 1px solid white;
-  button-radius: 50px
+  border-radius: 50px;
   padding: 8px 16px;
   cursor: pointer;
 }
@@ -79,7 +79,7 @@ body {
 .button {
   color: white;
   border: 1px solid white;
-  button-radius: 50px
+  border-radius: 50px;
   padding: 8px 16px;
   cursor: pointer;
   max-height: 40px;
@@ -140,7 +140,7 @@ body {
   border-radius: 16px;
 }
 
-.image, .profile {
+.image {
   object-fit: cover
   position: relative;
   top: 0;
