--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
 .login-button
   color: white;
   border: 1px solid white;
-  border-radius: 50px;
+  radius: 50px;
   padding: 8px 16px;
   cursor: pointer;
 }
