--- a/style.css
+++ b/style.css
@@ -60,7 +60,14 @@ body {
 }
 
 .login {
-  margin-right: 20px;
+  color: white;
+  background-color: green
+  border: 1px solid white;
+  border-radius: 50px;
+  padding: 8px 16px;
+  cursor: pointer;
+  max-height: 40px;
+  width: auto;
 }
 
 .icon {
