--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .logo {
   margin-left: 20px;
   padding: 4px;
-  transition-hover: .50px
+  transition: transform 0.3s ease-in-out;
 }
 
 .logo-image {
