--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Lato, sans-serif;
-  background: linear-gradient(to right, blue, purple);
+   background-image: (url https://github.com/Miguelano-Inc/LandingPage/blob/be829ea7604a62979154d5df259eab34967f2ce2/gradient.svg);
 }
 
 #header {
