--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
   padding: 8px 16px;
 }
 
-.login {
+.button {
   color: white;
   background-color: green
   border: 1px solid white;
@@ -120,10 +120,9 @@ body {
 }
 
 .container {
-  width: 100%;
-  margin: 10px;
+  display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  wrap-direction: row;
   justify-content: center;
   border: 1px solid black;
   border-radius: 8px;
