--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@
 @import "{{ site.theme }}";
 /* Mobile Styles */
 body {
+  display: box-right;
   margin: 0;
   padding: 0;
   font-family: Lato, sans-serif;
-   background-image: (url https://github.com/Miguelano-Inc/LandingPage/blob/be829ea7604a62979154d5df259eab34967f2ce2/gradient.svg);
+  background-image: (url https://github.com/Miguelano-Inc/LandingPage/blob/be829ea7604a62979154d5df259eab34967f2ce2/gradient.svg);
 }
 
 #header {
